# basilex-notebook

./: .gitignore  README.md  dev.ipynb  pyproject.toml  tutorial.ipynb
src/basapp/: core.lpy
