[tool.poetry]
name = "basilex-jupyter"
version = "0.1.0"
description = ""
authors = ["ikappaki <ikappaki@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "basapp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^7.2.2"
basilisp-kernel = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
